--- a/WebApplication2/Views/Gigs/Create.cshtml
+++ b/WebApplication2/Views/Gigs/Create.cshtml
@@ -9,14 +9,17 @@
     <div class="form-group">
         @Html.LabelFor(m => m.Venue)
         @Html.TextBoxFor(m => m.Venue, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Venue)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Date)
         @Html.TextBoxFor(m => m.Date, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Date)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Time)
         @Html.TextBoxFor(m => m.Time, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Time)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Genre)
@@ -25,3 +28,8 @@
     <button type="submit" class="btn btn-danger">Save</button>
 }
 <form></form>
+
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval")
+}
